fix(modal): adjust footer slotted content spacing (#269)
on-behalf-of: @ithaka <robert.niznik@ithaka.org>

--- a/packages/pharos/src/components/modal/pharos-modal.scss
+++ b/packages/pharos/src/components/modal/pharos-modal.scss
@@ -128,7 +128,7 @@
 }
 
 slot[name='footer']::slotted(*) {
-  margin: var(--pharos-spacing-one-half-x);
+  margin-left: var(--pharos-spacing-1-x);
 }
 
 :host([footer-divider]) {
